fix: responsive on mobile device

--- a/src/assets/scss/theme/sections/_hero.scss
+++ b/src/assets/scss/theme/sections/_hero.scss
@@ -32,6 +32,12 @@
   margin: 2vh;
   border-radius: 5px;
   padding-bottom: 3vh;
+
+  @media (max-width: 767px) {
+    display: flex;
+    width: 90vw;
+    margin: auto;
+  }
 }
 
 .form-recruit {
